--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
     width: 200px;
     margin-top: 10px;
 }
-.radio {} .back-arrow {
+.radio .back-arrow {
     position: fixed;
     top: 27px;
     left: 45px;
