--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 body {
     background-image: url("img/back42.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-color: white;
-    min-height: 650px;
+    background-position: top center;
+    background-attachment: scroll;
 }
-#image-down{
-    margin: -10px;
-    width: 110%;
+body > #image-down{
+    position: fixed;
+    bottom: 0;
+    z-index: -9;
 }
 .header {
     width: 510px;
@@ -64,11 +64,9 @@ body {
     margin-top: -107px;
 }
 .right-panel {
-    
     position: absolute;
     top: 0px;
     right: 0px;
-    bottom: 0px;
     width: 200px;
     height: 730px;
     padding: 10px;
